Cherry-pick r250940. rdar://problem/56598350
    [WebAuthn] Move the mock testing entrance to Internals
    https://bugs.webkit.org/show_bug.cgi?id=202560
    <rdar://problem/55973793>

    Reviewed by Chris Dumez.

    Source/WebCore:

    This patch moves TestRunner.setWebAuthenticationMockConfiguration to
    Internals.setMockWebAuthenticationConfiguration and removes the old
    entrance. The purpose of this patch is to allow API tests to use
    the same mock infrastructure that is used by layout tests.

    No new tests, covered by updates on existing tests.

    * DerivedSources-input.xcfilelist:
    * DerivedSources-output.xcfilelist:
    * DerivedSources.make:
    * Modules/webauthn/PublicKeyCredentialCreationOptions.h:
    * WebCore.xcodeproj/project.pbxproj:
    * page/ChromeClient.h:
    (WebCore::ChromeClient::setMockWebAuthenticationConfiguration):
    * testing/Internals.cpp:
    (WebCore::Internals::setMockWebAuthenticationConfiguration):
    * testing/Internals.h:
    * testing/Internals.idl:
    * testing/MockWebAuthenticationConfiguration.h: Added.
    (WebCore::MockWebAuthenticationConfiguration::LocalConfiguration::encode const):
    (WebCore::MockWebAuthenticationConfiguration::LocalConfiguration::decode):
    (WebCore::MockWebAuthenticationConfiguration::HidConfiguration::encode const):
    (WebCore::MockWebAuthenticationConfiguration::HidConfiguration::decode):
    (WebCore::MockWebAuthenticationConfiguration::NfcConfiguration::encode const):
    (WebCore::MockWebAuthenticationConfiguration::NfcConfiguration::decode):
    (WebCore::MockWebAuthenticationConfiguration::encode const):
    (WebCore::MockWebAuthenticationConfiguration::decode):
    * testing/MockWebAuthenticationConfiguration.idl: Added.

    Source/WebKit:

    * UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
    (WKWebsiteDataStoreSetWebAuthenticationMockConfiguration): Deleted.
    * UIProcess/API/C/WKWebsiteDataStoreRef.h:
    * UIProcess/WebAuthentication/AuthenticatorTransportSe

--- a/LayoutTests/http/wpt/webauthn/idl.https.html
+++ b/LayoutTests/http/wpt/webauthn/idl.https.html
@@ -62,6 +62,9 @@ promise_test(async () => {
             pubKeyCredParams: [{ type: "public-key", alg: -7 }],
         }
     };
+    // A mock attestation object
+    if (window.internals)
+        internals.setMockWebAuthenticationConfiguration({ hid: { stage: "request", subStage: "msg", error: "success", payloadBase64: [testCreationMessageBase64] } });
     createdCredential = await navigator.credentials.create(creationOptions);
 
 
@@ -70,6 +73,8 @@ promise_test(async () => {
             challenge: Base64URL.parse("MTIzNDU2"),
         }
     };
+    if (window.internals)
+        internals.setMockWebAuthenticationConfiguration({ hid: { stage: "request", subStage: "msg", error: "success", payloadBase64: [testAssertionMessageBase64] } });
     requestedCredential = await navigator.credentials.get(requestOptions);
 
     idlArray.add_objects({"PublicKeyCredential": ["createdCredential"], "AuthenticatorAttestationResponse": ["createdCredential.response"], "AuthenticatorAssertionResponse": ["requestedCredential.response"]});
