--- a/LayoutTests/http/wpt/webauthn/public-key-credential-create-failure-local-silent.https.html
+++ b/LayoutTests/http/wpt/webauthn/public-key-credential-create-failure-local-silent.https.html
@@ -5,8 +5,8 @@
 <script src="./resources/util.js"></script>
 <script>
     // Default mock configuration. Tests need to override if they need different configuration.
-    if (window.testRunner)
-        testRunner.setWebAuthenticationMockConfiguration({ silentFailure: true, local: { acceptAuthentication: false, acceptAttestation: false } });
+    if (window.internals)
+        internals.setWebAuthenticationMockConfiguration({ silentFailure: true, local: { acceptAuthentication: false, acceptAttestation: false } });
 
     promise_test(t => {
         const options = {
@@ -100,42 +100,46 @@
         };
         return promiseRejects(t, "NotAllowedError", navigator.credentials.create(options), "Operation timed out.");
     }, "PublicKeyCredential's [[create]] with silent failure in a mock local authenticator. 4");
+        promise_test(t => {
+            const options = {
+                publicKey: {
+                    rp: {
+                        name: "example.com"
+                    },
+                    user: {
+                        name: "John Appleseed",
+                        id: Base64URL.parse(testUserhandleBase64),
+                        displayName: "John",
+                    },
+                    challenge: asciiToUint8Array("123456"),
+                    pubKeyCredParams: [{ type: "public-key", alg: -7 }],
+                    timeout: 10
+                }
+            };
+            if (window.internals)
+                internals.setMockWebAuthenticationConfiguration({ silentFailure: true, local: { acceptAuthentication: true, acceptAttestation: false } });
+            return promiseRejects(t, "NotAllowedError", navigator.credentials.create(options), "Operation timed out.");
+        }, "PublicKeyCredential's [[create]] with silent failure in a mock local authenticator. 5");
 
-    promise_test(t => {
-        const options = {
-            publicKey: {
-                rp: {
-                    name: "example.com"
-                },
-                user: {
-                    name: "John Appleseed",
-                    id: Base64URL.parse(testUserhandleBase64),
-                    displayName: "John",
-                },
-                challenge: asciiToUint8Array("123456"),
-                pubKeyCredParams: [{ type: "public-key", alg: -7 }],
-                timeout: 10
-            }
-        };
-        if (window.testRunner)
-            testRunner.setWebAuthenticationMockConfiguration({ silentFailure: true, local: { acceptAuthentication: true, acceptAttestation: false } });
-        return promiseRejects(t, "NotAllowedError", navigator.credentials.create(options), "Operation timed out.");
-    }, "PublicKeyCredential's [[create]] with silent failure in a mock local authenticator. 5");
-
-    promise_test(t => {
-        const options = {
-            publicKey: {
-                rp: {
-                    name: "example.com"
-                },
-                user: {
-                    name: "John Appleseed",
-                    id: Base64URL.parse(testUserhandleBase64),
-                    displayName: "John",
-                },
-                challenge: asciiToUint8Array("123456"),
-                pubKeyCredParams: [{ type: "public-key", alg: -7 }],
-                timeout: 10
+        promise_test(t => {
+            const options = {
+                publicKey: {
+                    rp: {
+                        name: "example.com"
+                    },
+                    user: {
+                        name: "John Appleseed",
+                        id: Base64URL.parse(userhandleBase64),
+                        displayName: "John",
+                    },
+                    challenge: asciiToUint8Array("123456"),
+                    pubKeyCredParams: [{ type: "public-key", alg: -7 }],
+                    timeout: 10
+                }
+            };
+            if (window.internals) {
+                internals.setMockWebAuthenticationConfiguration({ silentFailure: true, local: { acceptAuthentication: true, acceptAttestation: false } });
+                testRunner.addTestKeyToKeychain(privateKeyBase64, testRpId, userhandleBase64);
             }
         };
         if (window.testRunner) {
