--- a/LayoutTests/http/wpt/webauthn/public-key-credential-create-success-local.https.html
+++ b/LayoutTests/http/wpt/webauthn/public-key-credential-create-success-local.https.html
@@ -6,8 +6,8 @@
 <script src="./resources/cbor.js"></script>
 <script>
     // Default mock configuration. Tests need to override if they need different configuration.
-    if (window.testRunner)
-        testRunner.setWebAuthenticationMockConfiguration({
+    if (window.internals)
+        internals.setWebAuthenticationMockConfiguration({
             local: {
                 acceptAuthentication: true,
                 acceptAttestation: true,
