--- a/LayoutTests/http/wpt/webauthn/public-key-credential-get-failure-local.https.html
+++ b/LayoutTests/http/wpt/webauthn/public-key-credential-get-failure-local.https.html
@@ -5,8 +5,8 @@
 <script src="./resources/util.js"></script>
 <script>
     // Default mock configuration. Tests need to override if they need different configuration.
-    if (window.testRunner)
-        testRunner.setWebAuthenticationMockConfiguration({ local: { acceptAuthentication: false, acceptAttestation: false } });
+    if (window.internals)
+        internals.setWebAuthenticationMockConfiguration({ local: { acceptAuthentication: false, acceptAttestation: false } });
 
     promise_test(t => {
         const options = {
