Apply patch. rdar://problem/56579657
Canonical link: https://commits.webkit.org/213666.521@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@251801 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/http/wpt/webauthn/public-key-credential-create-failure-local.https.html
+++ b/LayoutTests/http/wpt/webauthn/public-key-credential-create-failure-local.https.html
@@ -6,7 +6,7 @@
 <script>
     // Default mock configuration. Tests need to override if they need different configuration.
     if (window.internals)
-        internals.setWebAuthenticationMockConfiguration({ local: { acceptAuthentication: false, acceptAttestation: false } });
+        internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: false, acceptAttestation: false } });
 
     promise_test(t => {
         const options = {
@@ -112,72 +112,55 @@
                 pubKeyCredParams: [{ type: "public-key", alg: -7 }]
             }
         };
-        if (window.testRunner)
-            testRunner.setWebAuthenticationMockConfiguration({ local: { acceptAuthentication: true, acceptAttestation: false } });
+        if (window.internals)
+            internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: true, acceptAttestation: false } });
         return promiseRejects(t, "UnknownError", navigator.credentials.create(options), "Unknown internal error.");
     }, "PublicKeyCredential's [[create]] without attestation in a mock local authenticator.");
-        promise_test(t => {
-            const options = {
-                publicKey: {
-                    rp: {
-                        name: "example.com"
-                    },
-                    user: {
-                        name: "John Appleseed",
-                        id: Base64URL.parse(testUserhandleBase64),
-                        displayName: "John",
-                    },
-                    challenge: asciiToUint8Array("123456"),
-                    pubKeyCredParams: [{ type: "public-key", alg: -7 }]
-                }
-            };
-            if (window.internals)
-                internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: true, acceptAttestation: false } });
-            return promiseRejects(t, "UnknownError", navigator.credentials.create(options), "Unknown internal error.");
-        }, "PublicKeyCredential's [[create]] without attestation in a mock local authenticator.");
 
-        promise_test(t => {
-            const options = {
-                publicKey: {
-                    rp: {
-                        name: "example.com"
-                    },
-                    user: {
-                        name: userhandleBase64,
-                        id: Base64URL.parse(userhandleBase64),
-                        displayName: "John",
-                    },
-                    challenge: asciiToUint8Array("123456"),
-                    pubKeyCredParams: [{ type: "public-key", alg: -7 }]
-                }
-            };
-            if (window.internals) {
-                internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: true, acceptAttestation: false } });
-                testRunner.addTestKeyToKeychain(privateKeyBase64, testRpId, userhandleBase64);
+    promise_test(t => {
+        const options = {
+            publicKey: {
+                rp: {
+                    name: "example.com"
+                },
+                user: {
+                    name: testUserhandleBase64,
+                    id: Base64URL.parse(testUserhandleBase64),
+                    displayName: "John",
+                },
+                challenge: asciiToUint8Array("123456"),
+                pubKeyCredParams: [{ type: "public-key", alg: -7 }]
             }
         };
+        if (window.internals) {
+            internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: true, acceptAttestation: false } });
+            testRunner.addTestKeyToKeychain(testES256PrivateKeyBase64, testRpId, testUserhandleBase64);
+        }
+        return promiseRejects(t, "UnknownError", navigator.credentials.create(options), "Unknown internal error.").then(() => {
+            if (window.testRunner)
+                assert_false(testRunner.keyExistsInKeychain(testRpId, testUserhandleBase64));
+        });
+    }, "PublicKeyCredential's [[create]] deleting old credential in a mock local authenticator.");
 
-        promise_test(function(t) {
-            const options = {
-                publicKey: {
-                    rp: {
-                        name: "example.com"
-                    },
-                    user: {
-                        name: "John Appleseed",
-                        id: asciiToUint8Array("123456"),
-                        displayName: "John",
-                    },
-                    challenge: asciiToUint8Array("123456"),
-                    pubKeyCredParams: [{ type: "public-key", alg: -7 }],
-                    timeout: 10,
-                    authenticatorSelection: { authenticatorAttachment: "cross-platform" }
-                }
-            };
-
-            if (window.internals)
-                internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: false, acceptAttestation: false } });
-            return promiseRejects(t, "NotAllowedError", navigator.credentials.create(options), "Operation timed out.");
-        }, "PublicKeyCredential's [[create]] with timeout in a mock local authenticator.");
-    })();
+    promise_test(t => {
+        const options = {
+            publicKey: {
+                rp: {
+                    name: "example.com"
+                },
+                user: {
+                    name: "John Appleseed",
+                    id: asciiToUint8Array("123456"),
+                    displayName: "John",
+                },
+                challenge: asciiToUint8Array("123456"),
+                pubKeyCredParams: [{ type: "public-key", alg: -7 }],
+                timeout: 10,
+                authenticatorSelection: { authenticatorAttachment: "cross-platform" }
+            }
+        };
+        if (window.internals)
+            internals.setMockWebAuthenticationConfiguration({ local: { acceptAuthentication: false, acceptAttestation: false } });
+        return promiseRejects(t, "NotAllowedError", navigator.credentials.create(options), "Operation timed out.");
+    }, "PublicKeyCredential's [[create]] with timeout in a mock local authenticator.");
 </script>
