REGRESSION (r254406): Gmail.com star/favorite icons are not rendering https://bugs.webkit.org/show_bug.cgi?id=206909
Reviewed by Simon Fraser.

Source/WebCore:

Make image-set parsing more conservative, for backwards compatibility:
- Differentiate between image-set and -webkit-image-set when parsing, -webkit-image-set maintains old behavior.
- Don't allow empty urls when using raw strings, e.g. image-set('' 1x) is invalid.

Tests updated: fast/css/image-set-parsing.html.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeImageSet):
(WebCore::CSSPropertyParserHelpers::consumeImage):

LayoutTests:

Added empty URLs and new syntax with prefixed image-set to invalid tests.
Modified valid image-set parsing test to separate prefixed/non-prefixed.

* fast/css/image-set-parsing-generated.html:
* fast/css/image-set-parsing-invalid-expected.txt:
* fast/css/image-set-parsing-invalid.html:
* fast/css/image-set-parsing.html:


Canonical link: https://commits.webkit.org/220006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255420 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/fast/css/image-set-parsing.html
+++ b/LayoutTests/fast/css/image-set-parsing.html
@@ -31,13 +31,13 @@ function shouldBeType(expression, className, prototypeName, constructorName)
 // These have to be global for the test helpers to see them.
 var imageSetRule, subRule;
 
-function testImageSetRule(description, property, rule, expectedLength, expectedTexts)
+function testImageSetRule(description, property, rule, expectedLength, expectedTexts, propName = "-webkit-image-set")
 {
     debug("");
     debug(description + " : " + rule);
 
     var div = document.createElement("div");
-    div.setAttribute("style", property + ": -webkit-image-set(" + rule + ")");
+    div.setAttribute("style", property + ": " + propName + "(" + rule + ")");
     document.body.appendChild(div);
 
     imageSetRule = div.style.getPropertyCSSValue(property);
@@ -84,17 +84,17 @@ testImageSetRule("Multiple values for background-image",
 testImageSetRule("Single value for background-image without url() function",
                 "background-image",
                 "'#a' 1x", 2,
-                ["a", "1dppx"]);
+                ["a", "1dppx"], "image-set");
 
 testImageSetRule("Multiple values for background-image without url() function",
                 "background-image",
                 "'#a' 1x, '#b' 2x", 4,
-                ["a", "1dppx", "b", "2dppx"]);
+                ["a", "1dppx", "b", "2dppx"], "image-set");
 
 testImageSetRule("Mix values with and without url() function",
                 "background-image",
                 "'#a' 1x, url('#b') 2x", 4,
-                ["a", "1dppx", "b", "2dppx"]);
+                ["a", "1dppx", "b", "2dppx"], "image-set");
 
 testImageSetRule("Multiple values for background-image, out of order",
                 "background-image",
