--- a/LayoutTests/fast/css/image-set-parsing-invalid.html
+++ b/LayoutTests/fast/css/image-set-parsing-invalid.html
@@ -12,13 +12,13 @@ description("Test the parsing of the -webkit-image-set function.");
 // These have to be global for the test helpers to see them.
 var cssRule;
 
-function testInvalidImageSet(description, property, rule)
+function testInvalidImageSet(description, property, rule, attribute = "image-set")
 {
     debug("");
     debug(description + " : " + rule);
 
     var div = document.createElement("div");
-    div.setAttribute("style", property + ": -webkit-image-set(" + rule + ")");
+    div.setAttribute("style", property + ": " + attribute + "(" + rule + ")");
     document.body.appendChild(div);
 
     cssRule = div.style.getPropertyCSSValue(property);
@@ -29,6 +29,10 @@ function testInvalidImageSet(description, property, rule)
 
 testInvalidImageSet("Too many url parameters", "background-image", "url(#a #b)");
 testInvalidImageSet("No x", "background-image", "url('#a') 1");
+testInvalidImageSet("No raw string URLs with prefixed image-set", "background-image", "'image.png' 1x", "-webkit-image-set");
+testInvalidImageSet("Combination of valid and invalid with prefixed image-set", "background-image", "'image.png' 1x, url(image.png) 2x", "-webkit-image-set");
+testInvalidImageSet("Combination of valid and invalid with unprefixed image-set", "background-image", "'' 1x, url(image.png) 2x");
+testInvalidImageSet("No gradients with prefixed image-set", "background-image", "linear-gradient(black, white) 1x", "-webkit-image-set");
 testInvalidImageSet("No comma", "background-image", "url('#a') 1x url('#b') 2x");
 testInvalidImageSet("Too many scale factor parameters", "background-image", "url('#a') 1x 2x");
 testInvalidImageSet("Scale factor is 0", "background-image", "url('#a') 0x");
