Regression: http/tests/loading/remove-child-triggers-parser.html is failing consistently on windows https://bugs.webkit.org/show_bug.cgi?id=206992
Reviewed by Simon Fraser.

Added back html & body elements to make Windows bots happy.

* http/tests/loading/remove-child-triggers-parser-expected.txt:
* http/tests/loading/remove-child-triggers-parser.html:


Canonical link: https://commits.webkit.org/220043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255481 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/http/tests/loading/remove-child-triggers-parser.html
+++ b/LayoutTests/http/tests/loading/remove-child-triggers-parser.html
@@ -9,8 +9,10 @@ window.onload = () => {
     setTimeout(function() {
         var child = document.documentElement;
         child.parentNode.removeChild(child);
-        if (window.testRunner)
+        if (window.testRunner) {
+            document.appendChild(document.createElement('html')).innerHTML = '<body></body>';
             testRunner.notifyDone();
+        }
     }, 36);
 }
 </script>
