fast/events/touch/ios/long-press-on-link.html consistently times out after r254699 https://bugs.webkit.org/show_bug.cgi?id=207095
Reviewed by Darin Adler.

After <https://trac.webkit.org/r254699>, tests that end without causing presented view controllers to dismiss
will always cause the subsequent test to time out. This happens all the time with the layout test
fast/events/touch/ios/long-press-on-link.html, which runs after fast/events/touch/ios/long-press-on-image.html;
both of these tests long press previewable elements to present a context menu, but don't attempt to dismiss
these previews.

Address this by tapping at the web view's origin after ending the long press gesture, which causes the preview
view controllers that were presented by the test to dismiss.

* fast/events/touch/ios/long-press-on-image-expected.txt:
* fast/events/touch/ios/long-press-on-image.html:
* fast/events/touch/ios/long-press-on-link-expected.txt:
* fast/events/touch/ios/long-press-on-link.html:

Modernize these layout tests by adopting helper methods for driving interaction (instead of directly using
testRunner.runUIScript). Also, use the testing helpers in `js-test.js`, and add descriptions to each test.

* resources/ui-helper.js:
(window.UIHelper.longPressAndGetContextMenuContentAt.return.new.Promise):
(window.UIHelper.longPressAndGetContextMenuContentAt):

Make this resolve the promise to a parsed JSON object instead of a JSON string. Currently, the result is a JSON
string that is parsed at each call site.


Canonical link: https://commits.webkit.org/220101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255545 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/fast/events/touch/ios/long-press-on-image.html
+++ b/LayoutTests/fast/events/touch/ios/long-press-on-image.html
@@ -1,60 +1,45 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ useFlexibleViewport=true runSingly=true ] -->
+<!DOCTYPE html> <!-- webkit-test-runner [ useFlexibleViewport=true ] -->
 <meta charset="utf-8">
-
 <html>
 <head>
-    <script>
-        if (window.testRunner) {
-            testRunner.dumpAsText();
-            testRunner.waitUntilDone();
-        }
-
-        function getUIScript()
-        {
-            return `
-            (function() {
-                uiController.longPressAtPoint(30, 20, function() {
-                    uiController.uiScriptComplete(JSON.stringify(uiController.contentsOfUserInterfaceItem('contextMenu')));
-                });
-             })();`
-        }
-
-        function runTest()
-        {
-            if (!testRunner.runUIScript)
-                return;
-
-            var target = document.getElementById('target');
-            if (testRunner.runUIScript) {
-                testRunner.runUIScript(getUIScript(), function(result) {
-                    var results = JSON.parse(result).contextMenu;
-                    var output = '';
-                    if (results.imageURL.includes("dice.png") && results.isImage && !results.isLink)
-                        output += 'PASS: context menu triggered on image';
-                    else
-                        output += 'FAIL: context menu was not triggered on image';
-
-                    document.getElementById('target').innerHTML = output;
-                    testRunner.notifyDone();
-                });
-            }
-        }
-
-        window.addEventListener('load', runTest, false);
-    </script>
-    <style>
-        #target {
-            height: 100px;
-            width: 200px;
-            background-color: silver;
-        }
-    </style>
     <meta name="viewport" content="initial-scale=1">
+    <script src="../../../../resources/basic-gestures.js"></script>
+    <script src="../../../../resources/ui-helper.js"></script>
+    <script src="../../../../resources/js-test.js"></script>
+    <style>
+    #target {
+        height: 100px;
+        width: 200px;
+        background-color: silver;
+    }
+    </style>
+    <script>
+    jsTestIsAsync = true;
+
+    addEventListener("load", async () => {
+        description("Verifies that long pressing an image presents a context menu that shows the image name. To manually test, long press on the image.");
+
+        if (!window.testRunner || !testRunner.runUIScript)
+            return;
+
+        const targetRect = document.getElementById("target").getBoundingClientRect();
+        const pressPointX = targetRect.x + targetRect.width / 2;
+        const pressPointY = targetRect.y + targetRect.height / 2;
+        const results = (await UIHelper.longPressAndGetContextMenuContentAt(pressPointX, pressPointY)).contextMenu;
+        if (results.imageURL.includes("dice.png") && results.isImage && !results.isLink)
+            testPassed("context menu triggered on image");
+        else
+            testFailed("context menu was not triggered on image");
+
+        await liftUpAtPoint(pressPointX, pressPointY);
+        await UIHelper.activateAt(0, 0);
+        finishJSTest();
+    });
+    </script>
 </head>
 <body>
 <div id="target">
     <img src="../../../images/resources/dice.png" width="320" height="240" alt="Dice">
-    This test requires UIScriptController to run.
 </div>
 </body>
 </html>
