--- a/LayoutTests/editing/input/composition-highlights.html
+++ b/LayoutTests/editing/input/composition-highlights.html
@@ -11,7 +11,7 @@ div[contenteditable] {
 </head>
 <body>
 This test verifies that highlights can be specified when setting marked text.
-<div contenteditable>Test:&nbsp;</div>
+<div contenteditable>Test&nbsp;</div>
 
 <script>
 const editor = document.querySelector("div[contenteditable]");
