Check for callback being null in Notification.requestPermission https://bugs.webkit.org/show_bug.cgi?id=207192 <rdar://problem/59130804>
Reviewed by Chris Dumez.

Source/WebCore:

Covered by updated test.

* Modules/notifications/Notification.cpp:
(WebCore::Notification::requestPermission):
Callback can be null if no function is given to requestPermission.
Check this before calling the callback.

LayoutTests:

* http/tests/notifications/notification-in-non-secure-context.html:


Canonical link: https://commits.webkit.org/220196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255680 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/http/tests/notifications/notification-in-non-secure-context.html
+++ b/LayoutTests/http/tests/notifications/notification-in-non-secure-context.html
@@ -10,6 +10,8 @@ var test = async_test("Notification permission in insecure context");
 if (window.internals)
     internals.markContextAsInsecure();
 
+Notification.requestPermission();
+
 Notification.requestPermission(test.step_func((result) => {
     assert_equals(result, "denied", "result");
     assert_equals(Notification.permission, "denied", "getter");
